Estado pytest pasa (15/15 tests) JSON generado valida contra el schema CLI funcional: creador-tests parse/validate/batch Determinismo, trazabilidad y política de assets v1 implementados La implementación cumple con todos los requisitos especificados.

--- a/rules/rules-1.0.yaml
+++ b/rules/rules-1.0.yaml
@@ -30,7 +30,9 @@ typing:
       when:
         - any:
             - contains: "Asocia"
-            - regex: 'La respuesta correcta es:\\s*.*->.*'
+            - contains: "se corresponden"
+            - contains: "corresponden"
+            - regex: 'La respuesta correcta es:\\s*.*[→-]>.+'
 
     - id: multi_select
       kind: multi_select
