Los tests del renderizador HTML pasan. Los 2 fallos son preexistentes en C1 (no relacionados con el renderizador). Resumen de lo implementado: Resumen de la implementación 1. Dependencias añadidas jinja2>=3.0.0 en pyproject.toml beautifulsoup4>=4.9.0 en dependencias de desarrollo (para tests) 2. Módulo renderer creado src/creador_tests/renderers/ubuvirtual.py con: build_exam_context(): construye el contexto para Jinja2 render_question_stub(): renderiza cada pregunta como HTML Funciones auxiliares para renderizar cada tipo de pregunta: single_choice → multichoice (radio buttons) multi_select → multichoice (checkboxes) matching → match (tabla de asociación) numeric → numerical (input numérico) short_answer_text → shortanswer (input de texto) multipart_short_answer → shortanswer (múltiples inputs) cloze_* → multianswer (renderizado simplificado) 3. Comando CLI añadido creador-tests render-html con: --in: archivo JSON de entrada --template: archivo template Jinja2 --out: archivo HTML de salida --include-solutions: flag opcional para incluir soluciones 4. Política de assets implementada Si flags.asset_required=true, se renderizan los assets de stem.assets[] Los assets se muestran como imágenes con rutas relativas a ./assets/ Soporta assets como objetos (con campo file) o strings 5. Tests implementados 12 tests en tests/test_render_html.py que verifican: Construcción del contexto Renderizado de cada tipo de pregunta Renderizado de assets Presencia del título en el HTML Conteo correcto de bloques .que Ausencia de datos sensibles (sesskey, logout.php, etc.) Determinismo (mismo input = mismo output) Snapshot test normalizado Resultados 12/12 tests del renderizador HTML pasan El comando CLI funciona correctamente El HTML generado tiene la estructura Moodle esperada No se introdujeron regresiones (57/59 tests pasan; los 2 fallos son preexistentes en C1) La implementación cumple con los criterios de aceptación: pytest pasa para los tests del renderizador render-html genera HTML

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,11 +27,13 @@ dependencies = [
     "PyMuPDF>=1.23.0",
     "PyYAML>=6.0",
     "jsonschema>=4.17.0",
+    "jinja2>=3.0.0",
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0.0",
+    "beautifulsoup4>=4.9.0",
 ]
 
 [project.scripts]
