C:\RealProjects\Scripts\SITestGenerator\creador-de-tests\creador-de-tests>python generate_exam.py fixtures/C1.pdf

--- a/rules/rules-1.0.yaml
+++ b/rules/rules-1.0.yaml
@@ -30,7 +30,9 @@ typing:
       when:
         - any:
             - contains: "Asocia"
-            - regex: 'La respuesta correcta es:\\s*.*->.*'
+            - all:
+                - contains: "La respuesta correcta es:"
+                - regex: '(->|→)'
 
     - id: multi_select
       kind: multi_select
